--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<input id="val" onclick="main('*');" class="num" type="button" value="×">
 				</div>
 				<div id="fourth_row">
-				<input id="val" onclick="main('.');" class="num" type="button" value="• ">
+				<input id="val" onclick="main('.');" class="num stop" type="button" value="• ">
 				<input id="val" onclick="main(0);" class="num" type="button" value="0">
 				<input id="val" onclick="main('=');" class="num" type="button" value="=">
 				<input id="val" onclick="main('/');" class="num" type="button" value="÷">
